Purge missed jdk internal annotation export